--- a/package.json
+++ b/package.json
@@ -18,12 +18,19 @@
 	],
 	"license": "MIT",
 	"dependencies": {
+		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"pg": "^7.14.0",
+		"swagger-jsdoc": "^3.4.0",
+		"swagger-ui-express": "^4.1.2",
 		"typescript": "^3.7.2"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.2",
 		"@types/node": "^12.12.8",
+		"@types/pg": "^7.11.2",
+		"@types/swagger-jsdoc": "^3.0.2",
+		"@types/swagger-ui-express": "^4.1.0",
 		"tslint": "^5.20.1"
 	}
 }
