--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
 	"dependencies": {
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-basic-auth": "^1.2.0",
+		"express-jwt": "^5.3.1",
+		"jsonwebtoken": "^8.5.1",
 		"pg": "^7.14.0",
 		"swagger-jsdoc": "^3.4.0",
 		"swagger-ui-express": "^4.1.2",
@@ -27,6 +30,8 @@
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.2",
+		"@types/express-jwt": "^0.0.42",
+		"@types/jsonwebtoken": "^8.3.5",
 		"@types/node": "^12.12.8",
 		"@types/pg": "^7.11.2",
 		"@types/swagger-jsdoc": "^3.0.2",
