--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	],
 	"license": "MIT",
 	"dependencies": {
+		"body-parser": "^1.19.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-basic-auth": "^1.2.0",
@@ -29,6 +30,7 @@
 		"typescript": "^3.7.2"
 	},
 	"devDependencies": {
+		"@types/body-parser": "^1.17.1",
 		"@types/express": "^4.17.2",
 		"@types/express-jwt": "^0.0.42",
 		"@types/jsonwebtoken": "^8.3.5",
