Rewrite to use DI for unit test possbility
In order to effectively unit test the code the services had to be
rewritten to use dependency injection. Without this it would be
difficult to perform unit tests.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     volumes:
         # Set a volume to avoid data to be lost when the container is shut down.
         # `/var/lib/postgresql/data` is the default data directory. See PGDATA.
-      - ./postgres-data:/var/lib/postgresql/data
+      - /var/opt/postgres-data:/var/lib/postgresql/data
 
         # Scripts found in `/docker-entrypoint-initdb.d/` will be executed once
         # the postgres data volume is empty.
