Control with OMDb if film exists before saving ref
We do not want users to be able to save reviews for films that are not
available in OMDb.

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
 	],
 	"license": "MIT",
 	"dependencies": {
+		"@types/node-fetch": "^2.5.4",
 		"body-parser": "^1.19.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-basic-auth": "^1.2.0",
 		"express-jwt": "^5.3.1",
 		"jsonwebtoken": "^8.5.1",
+		"node-fetch": "^2.6.0",
 		"pg": "^7.14.0",
 		"swagger-jsdoc": "^3.4.0",
 		"swagger-ui-express": "^4.1.2",
