Use client instead of pool in saveReview
Multiple requests have to be done to get all the data needed after
inserting the new review into the database. Using simple pool queries
seem to throw errors from postgres, the issue was resolved when changing
to using a single client for the complete duration of the transaction.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
 		"build": "tsc",
 		"prestart": "yarn build",
 		"pretest": "yarn build",
-		"test": "mocha --require ts-node/register --recursive test/ src/**/*.spec.ts",
-		"coverage": "nyc mocha --require ts-node/register --recursive test/ src/**/*.spec.ts",
+		"test": "ENV=test mocha --require ts-node/register --recursive test/ src/**/*.spec.ts",
+		"coverage": "ENV=test nyc mocha --require ts-node/register --recursive test/ src/**/*.spec.ts",
 		"start": "node dist/app.js"
 	},
 	"contributors": [
