--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
 		"pg": "^7.14.0",
 		"swagger-jsdoc": "^3.4.0",
 		"swagger-ui-express": "^4.1.2",
-		"typescript": "^3.7.2"
+		"typescript": "^3.7.2",
+		"winston": "^3.2.1"
 	},
 	"devDependencies": {
 		"@istanbuljs/nyc-config-typescript": "^0.1.3",
@@ -50,6 +51,7 @@
 		"@types/sinon": "^7.5.1",
 		"@types/swagger-jsdoc": "^3.0.2",
 		"@types/swagger-ui-express": "^4.1.0",
+		"@types/winston": "^2.4.4",
 		"chai": "^4.2.0",
 		"mocha": "^6.2.2",
 		"nyc": "^14.1.1",
