--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - .:/app
     links:
       - postgres
+    environment:
+      LOG_LEVEL: DEBUG
 
   postgres:
     image: postgres:10.4
