Avoid errors on alphabetically-unsorted objects
There are better ways to sort objects than alphabetically.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     links:
       - postgres
     environment:
-      LOG_LEVEL: DEBUG
+      LOG_LEVEL: VERBOSE
 
   postgres:
     image: postgres:10.4
