--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"dependencies": {
 		"@types/fetch-mock": "^7.3.2",
 		"@types/node-fetch": "^2.5.4",
+		"bcrypt": "^3.0.7",
 		"body-parser": "^1.19.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
@@ -40,6 +41,7 @@
 	},
 	"devDependencies": {
 		"@istanbuljs/nyc-config-typescript": "^0.1.3",
+		"@types/bcrypt": "^3.0.0",
 		"@types/body-parser": "^1.17.1",
 		"@types/chai": "^4.2.5",
 		"@types/express": "^4.17.2",
