--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "80:8080"
     volumes:
       - .:/app
+      - /usr/src/app/node_modules # anonymous volume for node_modules only
     links:
       - postgres
     environment:
